# emby-manager

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  app.py  catalog_115.db  docker-compose.yml  index.html  manager.sh
docs/: smart-action-engine-plan.md
lib/: auth.py  autostrm.py  business.py  c115.py  catalog.py  config.py  config_api.py  dedup.py  emby.py  logger.py  safe.py  scheduler.py  tasks.py  undo.py
scripts/: README.md  alert.conf.example  alert.sh  clean_115_orphans.py  clean_invalid_catalog_links.py  compare_libs.py  compare_rust_python.py  install-cron.sh  (+7 more)
server/: Cargo.toml
server/migrations/: 0001_init.sql  0002_task_run_preview_meta.sql  0003_auth_login_attempts.sql  0004_smart_actions.sql  0005_smart_action_run_context.sql
server/src/: api.rs  auth.rs  autostrm.rs  c115.rs  catalog.rs  config_store.rs  dashboard.rs  db.rs  dedup.rs  emby.rs  error.rs  gaps.rs  insights.rs  lib.rs  logs.rs  main.rs  media_fs.rs  migrate.rs  openapi.rs  posters.rs  scheduler.rs  settings.rs  smart_actions.rs  state.rs  system.rs  tasks.rs  undo.rs  users.rs  wizard.rs  zhuigeng.rs
server/tests/: auth_security.rs  autostrm_webhook.rs  c115_client.rs  c115_ops.rs  c115_snap.rs  catalog_api.rs  config_api.rs  dedup_api.rs  emby_media.rs  insights_api.rs  library_create.rs  manage_execute.rs  manage_preview.rs  migrate_legacy.rs  openapi_new_modules.rs  posters_api.rs  regressions.rs  scheduler_preview.rs  smart_actions_api.rs  system_media.rs  undo_logs.rs  users_api.rs  wizard_api.rs  zhuigeng_api.rs
(+60 files in other folders)
